# oriebir-math

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/sbu/: __init__.py  core.py  operators.py
tests/: test_sbu_complete.py
