[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oriebir-math"
version = "1.0.2"
authors = [
  { name="zaqueu ribeiro", email="oriebirspeed@gmail.com" },
]
description = "SBU Engine: Unified Block Syntax for Mathematical Operations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]